<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_ipcamera</name>
  <version>0.0.1</version>
  <description>ROS2 component for use with IP cameras</description>
  <author>Tasuku Miura</author>
  <maintainer email="tasuku@gmail.com">tasuku</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/surfertas/ros2_ipcamera</url>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libopencv-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rmw_implementation_cmake</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>launch_ros</depend>
  <depend>camera_calibration_parsers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
